# wordle-analyzer

./: Cargo.toml  README.md
.gitea/workflows/: cargo.yaml
.github/workflows/: cargo.yaml
benches/: solver_naive.rs  solver_stupid.rs
data/wordlists/: german_SUBTLEX-DE_small.json  test.json
scripts/: discard_unimportant_words.py  make_all_lowercase.py  publish.sh  release.sh
src/: error.rs  lib.rs
src/bench/: builtin.rs  mod.rs  report.rs
src/game/: evaluation.rs  mod.rs  response.rs  summary.rs
src/solve/: mod.rs
src/solve/naive/: mod.rs  states.rs
src/solve/stupid/: mod.rs
src/solvers/: mod.rs
src/wlist/: builtin.rs  mod.rs  word.rs
tests/: game.rs  solver.rs
