[package]
name = "wordle-analyzer"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "MIT"
description = "Play, Analyze and Benchmark Wordle  / Wordle Strategies"
readme = "README.md"
homepage = "https://git.cscherr.de/PlexSheep/wordle-analyzer"
repository = "https://git.cscherr.de/PlexSheep/wordle-analyzer"
keywords = ["wordle", "benchmark"]
default-run = "wordlec"

[features]
default = ["game", "bench", "tui", "solve", "builtin", "serde"]
builtin = ["dep:serde_json", "serde"]
game = []
solve = ["game"]
tui = ["cli"]
cli = ["dep:clap"]
bench = []
serde = ["dep:serde"]

[dependencies]
anyhow = "1.0.81"
chrono = { version = "0.4.37" }
clap = { version = "4.5.3", features = ["derive"], optional = true }
colored = { version = "2.1.0", optional = false }
libpt = "0.6.0"
num_cpus = "1.16.0"
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.10.3"
serde = { version = "1.0.197", optional = true, features = ["serde_derive"] }
serde_json = { version = "1.0.114", optional = true }
# serde_with = "3.7.0"
thiserror = "1.0.58"

[[bin]]
name = "wordlec"
path = "src/bin/game/cli.rs"
required-features = ["game", "cli", "builtin"]

[[bin]]
name = "wordlet"
path = "src/bin/game/tui.rs"
required-features = ["tui", "game", "builtin"]

[[bin]]
name = "wordlesolve"
path = "src/bin/solve/simple.rs"
required-features = ["solve", "cli", "builtin"]

[[bin]]
name = "wordlebench"
path = "src/bin/bench/cli.rs"
required-features = ["solve", "cli", "bench", "builtin"]
